// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given form fields with values when the Add Item button is clicked then the item is added to the table and the Submit Invoice button is enabled 1`] = `
.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #191919;
  font-size: 0.9rem;
}

.c6 {
  width: 100%;
  border: 1px solid #DAE5EC;
  background-color: white;
  border-radius: 0.25rem;
  line-height: 1.3em;
  font-size: 0.9rem;
  text-indent: 0.8rem;
  padding: 0;
  box-sizing: border-box;
  font-family: Roboto,Arial,Helvetica,sans-serif;
  color: #191919;
  height: 2.5rem;
}

.c7 {
  line-height: 0.9rem;
  padding-bottom: 1rem;
  padding-top: 0.2rem;
  font-size: 0.8rem;
}

.c3 {
  display: grid;
  grid-template-rows: 1.25rem minmax(2.5rem,auto) minmax(2.1rem,auto);
  box-sizing: border-box;
}

.c5 {
  margin-left: 0.25rem;
  color: #E23636;
}

.c9 {
  border-collapse: collapse;
  width: 100%;
  border: 1px solid #EBF6FF;
}

.c12 {
  padding: 0.5rem;
  color: #191919;
  font-size: 0.9rem;
  border-bottom: 1px solid #EBF6FF;
}

.c10 {
  padding: 0.5rem;
  border-bottom: 1px solid #DAE5EC;
  color: #191919;
  opacity: 0.75;
  font-size: 0.8rem;
  text-transform: uppercase;
  text-align: left;
}

.c11:nth-child(odd) {
  background-color: #EBF6FF;
}

.c2 {
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  grid-template-columns: repeat(auto-fit,minmax(12.5rem,1fr));
  grid-row-gap: 0.5rem;
  grid-column-gap: 0.5rem;
  margin-bottom: 2rem;
}

.c0 {
  background-color: #e9ebec;
  border-top: 0.5rem solid #00b7e2;
  width: 100%;
  font-family: Roboto,Arial,Helvetica,sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: auto;
  max-width: 50%;
  min-width: 18.75rem;
  min-height: 31.25rem;
  margin-top: 5%;
  background-color: #fafafa;
  box-shadow: 0 -2px 0.75rem rgba(0,0,0,0.03);
  padding: 1rem;
}

.c13 {
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  margin-top: 2rem;
  -webkit-align-content: end;
  -ms-flex-line-pack: end;
  align-content: end;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: end;
  -ms-flex-pack: end;
  justify-content: end;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all ease-in-out 0.2s;
  transition: all ease-in-out 0.2s;
  vertical-align: top;
  white-space: nowrap;
  font-weight: bold;
  padding: 0 1.5rem;
  position: relative;
  font-size: 1rem;
  text-transform: capitalize;
  -webkit-letter-spacing: 0.01rem;
  -moz-letter-spacing: 0.01rem;
  -ms-letter-spacing: 0.01rem;
  letter-spacing: 0.01rem;
  font-family: inherit;
  color: white;
  background-color: #00b7e2;
}

.c15[aria-disabled='true'] {
  opacity: 0.4;
  pointer-events: none;
}

.c15:hover {
  background-color: #0097bb;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all ease-in-out 0.2s;
  transition: all ease-in-out 0.2s;
  vertical-align: top;
  white-space: nowrap;
  font-weight: bold;
  padding: 0 1.5rem;
  position: relative;
  font-size: 1rem;
  text-transform: capitalize;
  -webkit-letter-spacing: 0.01rem;
  -moz-letter-spacing: 0.01rem;
  -ms-letter-spacing: 0.01rem;
  letter-spacing: 0.01rem;
  font-family: inherit;
  color: #00b7e2;
  background-color: white;
  border: 1px solid #00b7e2;
  padding: 0 0.9rem;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  margin-top: 1.25rem;
}

.c8[aria-disabled='true'] {
  opacity: 0.4;
  pointer-events: none;
}

.c8:hover {
  background-color: #00b7e2;
  color: white;
}

.c14 {
  display: grid;
  justify-items: end;
}

<div>
  <main
    class="c0"
  >
    <article
      class="c1"
    >
      <form
        action="#"
        class="c2"
      >
        <div
          class="c3"
        >
          <label
            class="c4"
            for="description"
          >
            Description
            <span
              class="c5"
              title="Required"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="description_describedby"
            aria-invalid="false"
            aria-required="true"
            class="c6"
            id="description"
            name="description"
            type="text"
            value="Apples"
          />
          <div
            class="c7"
          />
        </div>
        <div
          class="c3"
        >
          <label
            class="c4"
            for="cost"
          >
            Cost
            <span
              class="c5"
              title="Required"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="cost_describedby"
            aria-invalid="false"
            aria-required="true"
            class="c6"
            id="cost"
            name="cost"
            type="number"
            value="10"
          />
          <div
            class="c7"
          />
        </div>
        <div
          class="c3"
        >
          <label
            class="c4"
            for="quantity"
          >
            Quantity
            <span
              class="c5"
              title="Required"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="quantity_describedby"
            aria-invalid="false"
            aria-required="true"
            class="c6"
            id="quantity"
            name="quantity"
            type="number"
            value="2"
          />
          <div
            class="c7"
          />
        </div>
        <button
          class="sc-AxjAm c8"
          type="submit"
        >
          Add item
        </button>
      </form>
      <table
        class="c9"
      >
        <thead>
          <tr>
            <th
              class="c10"
            >
              Description
            </th>
            <th
              class="c10"
            >
              Cost
            </th>
            <th
              class="c10"
            >
              Quantity
            </th>
            <th
              class="c10"
            >
              Price
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="c11"
          >
            <td
              class="c12"
            >
              Apples
            </td>
            <td
              class="c12"
            >
              $
              10
            </td>
            <td
              class="c12"
            >
              2
            </td>
            <td
              class="c12"
            >
              $
              20
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="c13"
      >
        Total: $20
      </p>
      <div
        class="c14"
      >
        <button
          aria-disabled="false"
          class="sc-AxjAm c15"
          type="button"
        >
          Submit invoice
        </button>
      </div>
    </article>
  </main>
</div>
`;

exports[`When rendered then the HTML matches this snapshot 1`] = `
.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #191919;
  font-size: 0.9rem;
}

.c6 {
  width: 100%;
  border: 1px solid #DAE5EC;
  background-color: white;
  border-radius: 0.25rem;
  line-height: 1.3em;
  font-size: 0.9rem;
  text-indent: 0.8rem;
  padding: 0;
  box-sizing: border-box;
  font-family: Roboto,Arial,Helvetica,sans-serif;
  color: #191919;
  height: 2.5rem;
}

.c7 {
  line-height: 0.9rem;
  padding-bottom: 1rem;
  padding-top: 0.2rem;
  font-size: 0.8rem;
}

.c3 {
  display: grid;
  grid-template-rows: 1.25rem minmax(2.5rem,auto) minmax(2.1rem,auto);
  box-sizing: border-box;
}

.c5 {
  margin-left: 0.25rem;
  color: #E23636;
}

.c9 {
  border-collapse: collapse;
  width: 100%;
  border: 1px solid #EBF6FF;
}

.c10 {
  padding: 0.5rem;
  border-bottom: 1px solid #DAE5EC;
  color: #191919;
  opacity: 0.75;
  font-size: 0.8rem;
  text-transform: uppercase;
  text-align: left;
}

.c2 {
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  grid-template-columns: repeat(auto-fit,minmax(12.5rem,1fr));
  grid-row-gap: 0.5rem;
  grid-column-gap: 0.5rem;
  margin-bottom: 2rem;
}

.c0 {
  background-color: #e9ebec;
  border-top: 0.5rem solid #00b7e2;
  width: 100%;
  font-family: Roboto,Arial,Helvetica,sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: auto;
  max-width: 50%;
  min-width: 18.75rem;
  min-height: 31.25rem;
  margin-top: 5%;
  background-color: #fafafa;
  box-shadow: 0 -2px 0.75rem rgba(0,0,0,0.03);
  padding: 1rem;
}

.c11 {
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  margin-top: 2rem;
  -webkit-align-content: end;
  -ms-flex-line-pack: end;
  align-content: end;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: end;
  -ms-flex-pack: end;
  justify-content: end;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all ease-in-out 0.2s;
  transition: all ease-in-out 0.2s;
  vertical-align: top;
  white-space: nowrap;
  font-weight: bold;
  padding: 0 1.5rem;
  position: relative;
  font-size: 1rem;
  text-transform: capitalize;
  -webkit-letter-spacing: 0.01rem;
  -moz-letter-spacing: 0.01rem;
  -ms-letter-spacing: 0.01rem;
  letter-spacing: 0.01rem;
  font-family: inherit;
  color: white;
  background-color: #00b7e2;
}

.c13[aria-disabled='true'] {
  opacity: 0.4;
  pointer-events: none;
}

.c13:hover {
  background-color: #0097bb;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all ease-in-out 0.2s;
  transition: all ease-in-out 0.2s;
  vertical-align: top;
  white-space: nowrap;
  font-weight: bold;
  padding: 0 1.5rem;
  position: relative;
  font-size: 1rem;
  text-transform: capitalize;
  -webkit-letter-spacing: 0.01rem;
  -moz-letter-spacing: 0.01rem;
  -ms-letter-spacing: 0.01rem;
  letter-spacing: 0.01rem;
  font-family: inherit;
  color: #00b7e2;
  background-color: white;
  border: 1px solid #00b7e2;
  padding: 0 0.9rem;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  margin-top: 1.25rem;
}

.c8[aria-disabled='true'] {
  opacity: 0.4;
  pointer-events: none;
}

.c8:hover {
  background-color: #00b7e2;
  color: white;
}

.c12 {
  display: grid;
  justify-items: end;
}

<div>
  <main
    class="c0"
  >
    <article
      class="c1"
    >
      <form
        action="#"
        class="c2"
      >
        <div
          class="c3"
        >
          <label
            class="c4"
            for="description"
          >
            Description
            <span
              class="c5"
              title="Required"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="description_describedby"
            aria-invalid="false"
            aria-required="true"
            class="c6"
            id="description"
            name="description"
            type="text"
            value=""
          />
          <div
            class="c7"
          />
        </div>
        <div
          class="c3"
        >
          <label
            class="c4"
            for="cost"
          >
            Cost
            <span
              class="c5"
              title="Required"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="cost_describedby"
            aria-invalid="false"
            aria-required="true"
            class="c6"
            id="cost"
            name="cost"
            type="number"
            value="0"
          />
          <div
            class="c7"
          />
        </div>
        <div
          class="c3"
        >
          <label
            class="c4"
            for="quantity"
          >
            Quantity
            <span
              class="c5"
              title="Required"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="quantity_describedby"
            aria-invalid="false"
            aria-required="true"
            class="c6"
            id="quantity"
            name="quantity"
            type="number"
            value="0"
          />
          <div
            class="c7"
          />
        </div>
        <button
          class="sc-AxjAm c8"
          type="submit"
        >
          Add item
        </button>
      </form>
      <table
        class="c9"
      >
        <thead>
          <tr>
            <th
              class="c10"
            >
              Description
            </th>
            <th
              class="c10"
            >
              Cost
            </th>
            <th
              class="c10"
            >
              Quantity
            </th>
            <th
              class="c10"
            >
              Price
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
      <p
        class="c11"
      >
        Total: $0
      </p>
      <div
        class="c12"
      >
        <button
          aria-disabled="true"
          class="sc-AxjAm c13"
          type="button"
        >
          Submit invoice
        </button>
      </div>
    </article>
  </main>
</div>
`;
